docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/Five9_Call_Log__c.object-meta.xml
<CustomObject>
    <label>Five9 Call Log</label>
    <nameField>
        <displayFormat>CallLog-{0}</displayFormat>
        <label>Five9 Call Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Five9 Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>