docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Five9_Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>