docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Agent_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Full_Name__c</fullName>
    <label>Agent Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>