docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Agent_Username__c.field-meta.xml
<CustomField>
    <fullName>Agent_Username__c</fullName>
    <label>Agent Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>