docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <label>ANI</label>
    <length>25</length>
    <type>Text</type>
</CustomField>