docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <label>Attempt Count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>