docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Call_Direction__c.field-meta.xml
<CustomField>
    <fullName>Call_Direction__c</fullName>
    <label>Call Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>