docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Id__c</fullName>
    <label>Call Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>