docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Caller_Language__c.field-meta.xml
<CustomField>
    <fullName>Caller_Language__c</fullName>
    <label>Caller Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>en-US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>