docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>