docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>