docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/DNIS__c.field-meta.xml
<CustomField>
    <fullName>DNIS__c</fullName>
    <label>DNIS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>