docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/f9_Call_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>f9_Call_End_DateTime__c</fullName>
    <label>f9 Call End DateTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>