docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/f9_call_Type__c.field-meta.xml
<CustomField>
    <fullName>f9_call_Type__c</fullName>
    <label>f9 Call Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>