docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/f9_Last_Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>f9_Last_Attempt_Number__c</fullName>
    <label>f9 Last Attempted Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>