docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/f9_Last_Campaign__c.field-meta.xml
<CustomField>
    <fullName>f9_Last_Campaign__c</fullName>
    <label>f9 Last Campaign</label>
    <length>25</length>
    <type>Text</type>
</CustomField>