docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/f9_Last_Disposition__c.field-meta.xml
<CustomField>
    <fullName>f9_Last_Disposition__c</fullName>
    <label>f9 Last Disposition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>