docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/f9_Last_Disposition_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>f9_Last_Disposition_Date_Formula__c</fullName>
    <formula>DATETIMEVALUE(
  LEFT(f9_Last_Disposition_Date__c, 4) + &quot;-&quot; +
  MID(f9_Last_Disposition_Date__c, 5, 2) + &quot;-&quot; +
  MID(f9_Last_Disposition_Date__c, 7, 2) + &quot; &quot; +
  MID(f9_Last_Disposition_Date__c, 9, 2) + &quot;:&quot; +
  MID(f9_Last_Disposition_Date__c, 11, 2) + &quot;:&quot; +
  MID(f9_Last_Disposition_Date__c, 13, 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>f9 Last Disposition Date</label>
    <type>DateTime</type>
</CustomField>