docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/IVR_Script_Name__c.field-meta.xml
<CustomField>
    <fullName>IVR_Script_Name__c</fullName>
    <label>IVR Script Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>