docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Five9 Call Logs</relationshipLabel>
    <relationshipName>Five9_Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>