docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <label>Lead_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>