docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Five9 Call Logs</relationshipLabel>
    <relationshipName>Five9_Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>