docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <label>Opportunity_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>