docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>