docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IVR_Script_Name__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Agent_Username__c</columns>
    <columns>ANI__c</columns>
    <columns>DNIS__c</columns>
    <columns>Lead_Id__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Disposition__c</columns>
    <columns>f9_Last_Disposition__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Call_Direction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Call_Direction__c</field>
        <operation>equals</operation>
        <value>Inbound</value>
    </filters>
    <label>All</label>
</ListView>