docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/listViews/Call_Transferred_Today.listView-meta.xml
<ListView>
    <fullName>Call_Transferred_Today</fullName>
    <columns>NAME</columns>
    <columns>Agent_Full_Name__c</columns>
    <columns>Agent_Username__c</columns>
    <columns>Lead_Id__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity_Id__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ANI__c</columns>
    <columns>DNIS__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Disposition__c</columns>
    <columns>f9_Call_Handle_Time__c</columns>
    <columns>IVR_Script_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Disposition__c</field>
        <operation>equals</operation>
        <value>CALL TRANSFERRED</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Agent_Full_Name__c</field>
        <operation>notContain</operation>
        <value>Crone</value>
    </filters>
    <label>Call Transferred Today</label>
</ListView>