docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/listViews/five9Connector.listView-meta.xml
<ListView>
    <fullName>five9Connector</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ANI__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Agent_Username__c</columns>
    <columns>f9_Last_Agent__c</columns>
    <columns>DNIS__c</columns>
    <columns>Disposition__c</columns>
    <columns>f9_Call_Handle_Time__c</columns>
    <columns>IVR_Script_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IVR_Script_Name__c</field>
        <operation>equals</operation>
        <value>Five9 Connector</value>
    </filters>
    <label>Five9Connector</label>
</ListView>