docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/listViews/PostCall.listView-meta.xml
<ListView>
    <fullName>PostCall</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Agent__c</columns>
    <columns>Agent_Username__c</columns>
    <columns>ANI__c</columns>
    <columns>Attempt_Count__c</columns>
    <columns>IVR_Script_Name__c</columns>
    <columns>Call_Direction__c</columns>
    <columns>Caller_Language__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Disposition__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>f9_Last_Agent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IVR_Script_Name__c</field>
        <operation>equals</operation>
        <value>Post Call</value>
    </filters>
    <label>PostCall</label>
</ListView>