docs/sf-export/sfdx-raw/objects/Five9_Call_Log__c/listViews/Shared_Web_Leads_OB_3_Plus.listView-meta.xml
<ListView>
    <fullName>Shared_Web_Leads_OB_3_Plus</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>IVR_Script_Name__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Agent_Username__c</columns>
    <columns>ANI__c</columns>
    <columns>DNIS__c</columns>
    <columns>Lead_Id__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Disposition__c</columns>
    <columns>f9_Last_Disposition__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Name__c</field>
        <operation>equals</operation>
        <value>Shared Web Leads OB - 3-Plus</value>
    </filters>
    <filters>
        <field>Campaign_Name__c</field>
        <operation>startsWith</operation>
        <value>Shared Web Leads -</value>
    </filters>
    <label>Shared Web Leads OB - 3-Plus</label>
</ListView>